--- a/CinemaBook/Scence/Manager/Management/MangamentProduct/MangamentFoodItem/view/MangamentFoodItemViewController.xib
+++ b/CinemaBook/Scence/Manager/Management/MangamentProduct/MangamentFoodItem/view/MangamentFoodItemViewController.xib
@@ -11,9 +11,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MangamentFoodItemViewController" customModule="CinemaBook" customModuleProvider="target">
             <connections>
+                <outlet property="collectionview_categoryfood" destination="9yj-6J-P7k" id="E85-NR-cGC"/>
                 <outlet property="tableview" destination="vCX-60-cwm" id="PyD-mK-Sia"/>
                 <outlet property="txt_search" destination="ynD-XE-Jzo" id="dZR-9v-b2C"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="view_no_data" destination="5HU-C5-d7a" id="pCj-1R-GwO"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -25,7 +27,7 @@
                     <rect key="frame" x="0.0" y="48" width="414" height="814"/>
                     <subviews>
                         <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="vCX-60-cwm">
-                            <rect key="frame" x="0.0" y="80" width="414" height="734"/>
+                            <rect key="frame" x="0.0" y="122" width="414" height="692"/>
                             <color key="backgroundColor" systemColor="systemGray6Color"/>
                         </tableView>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lz5-XM-UZ8">
@@ -64,7 +66,7 @@
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ck2-B3-NOQ">
-                            <rect key="frame" x="0.0" y="50" width="414" height="30"/>
+                            <rect key="frame" x="0.0" y="91" width="414" height="30"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Danh mục món" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zbr-rK-3M0">
                                     <rect key="frame" x="16" y="4.5" width="116" height="21"/>
@@ -92,7 +94,7 @@
                             <rect key="frame" x="0.0" y="0.0" width="414" height="40"/>
                             <subviews>
                                 <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Oso-Xe-vI8">
-                                    <rect key="frame" x="60" y="5" width="334" height="30"/>
+                                    <rect key="frame" x="20" y="5" width="374" height="30"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon-search-gray" translatesAutoresizingMaskIntoConstraints="NO" id="EKM-zJ-jQe">
                                             <rect key="frame" x="10" y="4" width="22" height="22"/>
@@ -102,7 +104,7 @@
                                             </constraints>
                                         </imageView>
                                         <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Tìm kiếm" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ynD-XE-Jzo">
-                                            <rect key="frame" x="32" y="0.0" width="302" height="30"/>
+                                            <rect key="frame" x="32" y="0.0" width="342" height="30"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <textInputTraits key="textInputTraits"/>
                                         </textField>
@@ -122,33 +124,52 @@
                                         </userDefinedRuntimeAttribute>
                                     </userDefinedRuntimeAttributes>
                                 </view>
-                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="y6b-Yg-4L1">
-                                    <rect key="frame" x="20" y="5" width="30" height="30"/>
-                                    <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon-filter 1" translatesAutoresizingMaskIntoConstraints="NO" id="bhX-Uh-Jdz">
-                                            <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
-                                        </imageView>
-                                    </subviews>
-                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                    <constraints>
-                                        <constraint firstAttribute="height" constant="30" id="4n9-R3-DXh"/>
-                                        <constraint firstAttribute="width" constant="30" id="BOj-MG-Vs2"/>
-                                        <constraint firstAttribute="bottom" secondItem="bhX-Uh-Jdz" secondAttribute="bottom" id="DVf-e4-BeR"/>
-                                        <constraint firstItem="bhX-Uh-Jdz" firstAttribute="leading" secondItem="y6b-Yg-4L1" secondAttribute="leading" id="HoT-qj-77P"/>
-                                        <constraint firstAttribute="trailing" secondItem="bhX-Uh-Jdz" secondAttribute="trailing" id="Jkc-LM-P1W"/>
-                                        <constraint firstItem="bhX-Uh-Jdz" firstAttribute="top" secondItem="y6b-Yg-4L1" secondAttribute="top" id="xeZ-a5-pQw"/>
-                                    </constraints>
-                                </view>
                             </subviews>
                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="40" id="21Z-AC-VLb"/>
                                 <constraint firstItem="Oso-Xe-vI8" firstAttribute="top" secondItem="Acv-WI-sa6" secondAttribute="top" constant="5" id="FFR-mL-uW4"/>
                                 <constraint firstAttribute="trailing" secondItem="Oso-Xe-vI8" secondAttribute="trailing" constant="20" id="S6l-tF-bSd"/>
-                                <constraint firstItem="Oso-Xe-vI8" firstAttribute="leading" secondItem="y6b-Yg-4L1" secondAttribute="trailing" constant="10" id="SCD-PC-DYl"/>
-                                <constraint firstItem="y6b-Yg-4L1" firstAttribute="leading" secondItem="Acv-WI-sa6" secondAttribute="leading" constant="20" id="dtY-Bz-KvI"/>
-                                <constraint firstItem="y6b-Yg-4L1" firstAttribute="centerY" secondItem="Acv-WI-sa6" secondAttribute="centerY" id="ffu-69-HMo"/>
+                                <constraint firstItem="Oso-Xe-vI8" firstAttribute="leading" secondItem="Acv-WI-sa6" secondAttribute="leading" constant="20" id="dZY-8z-Fw3"/>
                                 <constraint firstAttribute="bottom" secondItem="Oso-Xe-vI8" secondAttribute="bottom" constant="5" id="qLj-kp-Adc"/>
+                            </constraints>
+                        </view>
+                        <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="9yj-6J-P7k">
+                            <rect key="frame" x="0.0" y="40" width="414" height="50"/>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="50" id="Qsv-b5-YCv"/>
+                            </constraints>
+                            <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="DtJ-fy-Y7B">
+                                <size key="itemSize" width="128" height="128"/>
+                                <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                            </collectionViewFlowLayout>
+                        </collectionView>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5HU-C5-d7a">
+                            <rect key="frame" x="0.0" y="121" width="414" height="633"/>
+                            <subviews>
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img-no-data" translatesAutoresizingMaskIntoConstraints="NO" id="Wzz-cJ-Ddo">
+                                    <rect key="frame" x="107" y="150" width="200" height="200"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="200" id="Ct0-x0-zO5"/>
+                                        <constraint firstAttribute="width" constant="200" id="a04-da-1NH"/>
+                                    </constraints>
+                                </imageView>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Không có dữ liệu" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nr8-rS-TdD">
+                                    <rect key="frame" x="111" y="350" width="192.5" height="30"/>
+                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
+                                    <color key="textColor" systemColor="systemGray2Color"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                            <color key="backgroundColor" systemColor="systemGray6Color"/>
+                            <constraints>
+                                <constraint firstItem="Nr8-rS-TdD" firstAttribute="top" secondItem="Wzz-cJ-Ddo" secondAttribute="bottom" id="5R1-bp-sYh"/>
+                                <constraint firstItem="Wzz-cJ-Ddo" firstAttribute="centerX" secondItem="5HU-C5-d7a" secondAttribute="centerX" id="BZu-1y-WLq"/>
+                                <constraint firstItem="Wzz-cJ-Ddo" firstAttribute="top" secondItem="5HU-C5-d7a" secondAttribute="top" constant="150" id="FJ5-js-Fi6"/>
+                                <constraint firstItem="Nr8-rS-TdD" firstAttribute="centerX" secondItem="5HU-C5-d7a" secondAttribute="centerX" id="dcq-k9-hcv"/>
                             </constraints>
                         </view>
                     </subviews>
@@ -156,16 +177,23 @@
                     <constraints>
                         <constraint firstItem="vCX-60-cwm" firstAttribute="leading" secondItem="PYd-4m-6CG" secondAttribute="leading" id="0Mm-ad-0kl"/>
                         <constraint firstAttribute="trailing" secondItem="Ck2-B3-NOQ" secondAttribute="trailing" id="0TX-hC-40Q"/>
-                        <constraint firstItem="vCX-60-cwm" firstAttribute="top" secondItem="Ck2-B3-NOQ" secondAttribute="bottom" id="8uV-k2-i8c"/>
                         <constraint firstItem="Ck2-B3-NOQ" firstAttribute="leading" secondItem="PYd-4m-6CG" secondAttribute="leading" id="99o-Md-RFU"/>
+                        <constraint firstItem="9yj-6J-P7k" firstAttribute="top" secondItem="Acv-WI-sa6" secondAttribute="bottom" id="CV4-0p-qks"/>
                         <constraint firstItem="Acv-WI-sa6" firstAttribute="top" secondItem="PYd-4m-6CG" secondAttribute="top" id="DEX-EM-xTS"/>
+                        <constraint firstItem="vCX-60-cwm" firstAttribute="top" secondItem="Ck2-B3-NOQ" secondAttribute="bottom" constant="1" id="Lh8-6a-dyR"/>
                         <constraint firstItem="Acv-WI-sa6" firstAttribute="leading" secondItem="PYd-4m-6CG" secondAttribute="leading" id="LnH-07-VxK"/>
+                        <constraint firstAttribute="trailing" secondItem="5HU-C5-d7a" secondAttribute="trailing" id="PH4-MQ-fCi"/>
+                        <constraint firstAttribute="trailing" secondItem="9yj-6J-P7k" secondAttribute="trailing" id="PlB-Qp-CGI"/>
+                        <constraint firstItem="5HU-C5-d7a" firstAttribute="top" secondItem="Ck2-B3-NOQ" secondAttribute="bottom" id="aEL-Ch-uNm"/>
                         <constraint firstItem="lz5-XM-UZ8" firstAttribute="leading" secondItem="PYd-4m-6CG" secondAttribute="leading" id="chq-mE-bWb"/>
                         <constraint firstAttribute="trailing" secondItem="vCX-60-cwm" secondAttribute="trailing" id="g8U-US-7zb"/>
                         <constraint firstAttribute="trailing" secondItem="lz5-XM-UZ8" secondAttribute="trailing" id="gMR-Cw-FTV"/>
-                        <constraint firstItem="Ck2-B3-NOQ" firstAttribute="top" secondItem="PYd-4m-6CG" secondAttribute="top" constant="50" id="iHD-kM-Pd6"/>
+                        <constraint firstItem="5HU-C5-d7a" firstAttribute="leading" secondItem="PYd-4m-6CG" secondAttribute="leading" id="hfs-cz-D0q"/>
                         <constraint firstAttribute="bottom" secondItem="lz5-XM-UZ8" secondAttribute="bottom" id="irA-u2-Xyc"/>
+                        <constraint firstItem="lz5-XM-UZ8" firstAttribute="top" secondItem="5HU-C5-d7a" secondAttribute="bottom" id="k5Q-qy-WEs"/>
+                        <constraint firstItem="Ck2-B3-NOQ" firstAttribute="top" secondItem="9yj-6J-P7k" secondAttribute="bottom" constant="1" id="oVn-Jj-QVL"/>
                         <constraint firstAttribute="trailing" secondItem="Acv-WI-sa6" secondAttribute="trailing" id="p9s-hl-X8n"/>
+                        <constraint firstItem="9yj-6J-P7k" firstAttribute="leading" secondItem="PYd-4m-6CG" secondAttribute="leading" id="qqd-8h-4Lm"/>
                         <constraint firstAttribute="bottom" secondItem="vCX-60-cwm" secondAttribute="bottom" id="yVR-CB-sz1"/>
                     </constraints>
                 </view>
@@ -182,13 +210,16 @@
         </view>
     </objects>
     <resources>
-        <image name="icon-filter 1" width="30" height="30"/>
         <image name="icon-search-gray" width="30" height="30"/>
+        <image name="img-no-data" width="220" height="170"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemBlueColor">
             <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGray2Color">
+            <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGray6Color">
             <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
