--- a/CinemaBook/Scence/MessageChatAndNotifaction/NotifcationMessage/view/NotifcationMessageViewController.xib
+++ b/CinemaBook/Scence/MessageChatAndNotifaction/NotifcationMessage/view/NotifcationMessageViewController.xib
@@ -11,9 +11,12 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="NotifcationMessageViewController" customModule="CinemaBook" customModuleProvider="target">
             <connections>
+                <outlet property="btn_checkin" destination="y9r-MJ-d8t" id="nS6-rc-XM8"/>
+                <outlet property="btn_notif" destination="bfw-uv-ggw" id="k7X-ZW-pHs"/>
                 <outlet property="tableview" destination="YGS-A0-CXO" id="5Gj-xA-1qx"/>
                 <outlet property="txt_search" destination="Yos-Va-mw2" id="yba-lB-dVh"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="view_option_notifactionandcheckin" destination="lby-s7-7NF" id="9WU-m8-ERA"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -25,7 +28,7 @@
                     <rect key="frame" x="0.0" y="59" width="393" height="759"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sAP-fR-c2n">
-                            <rect key="frame" x="0.0" y="0.0" width="393" height="60"/>
+                            <rect key="frame" x="0.0" y="51" width="393" height="60"/>
                             <subviews>
                                 <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7vc-t7-3Fw">
                                     <rect key="frame" x="20" y="10" width="353" height="40"/>
@@ -69,17 +72,57 @@
                             </constraints>
                         </view>
                         <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="YGS-A0-CXO">
-                            <rect key="frame" x="0.0" y="60" width="393" height="699"/>
+                            <rect key="frame" x="0.0" y="111" width="393" height="648"/>
                             <color key="backgroundColor" systemColor="systemGray6Color"/>
                         </tableView>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lby-s7-7NF">
+                            <rect key="frame" x="0.0" y="0.0" width="393" height="50"/>
+                            <subviews>
+                                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="y8p-f8-m8Y">
+                                    <rect key="frame" x="0.0" y="0.0" width="393" height="50"/>
+                                    <subviews>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bfw-uv-ggw">
+                                            <rect key="frame" x="0.0" y="0.0" width="196.66666666666666" height="50"/>
+                                            <color key="backgroundColor" systemColor="systemBlueColor"/>
+                                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                            <state key="normal" title="Thông báo">
+                                                <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                            </state>
+                                            <connections>
+                                                <action selector="btn_show_notifacation:" destination="-1" eventType="touchUpInside" id="Mm3-hu-f8R"/>
+                                            </connections>
+                                        </button>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y9r-MJ-d8t">
+                                            <rect key="frame" x="196.66666666666663" y="0.0" width="196.33333333333337" height="50"/>
+                                            <state key="normal" title="Button"/>
+                                            <buttonConfiguration key="configuration" style="plain" title="Chấm công"/>
+                                            <connections>
+                                                <action selector="btn_show_list_checkin:" destination="-1" eventType="touchUpInside" id="Afh-63-OoH"/>
+                                            </connections>
+                                        </button>
+                                    </subviews>
+                                </stackView>
+                            </subviews>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="50" id="JOM-qk-8Lu"/>
+                                <constraint firstItem="y8p-f8-m8Y" firstAttribute="top" secondItem="lby-s7-7NF" secondAttribute="top" id="SSV-S3-BBt"/>
+                                <constraint firstItem="y8p-f8-m8Y" firstAttribute="leading" secondItem="lby-s7-7NF" secondAttribute="leading" id="mNb-Uw-3bW"/>
+                                <constraint firstAttribute="trailing" secondItem="y8p-f8-m8Y" secondAttribute="trailing" id="mfl-71-f0s"/>
+                                <constraint firstAttribute="bottom" secondItem="y8p-f8-m8Y" secondAttribute="bottom" id="xnk-H3-OQD"/>
+                            </constraints>
+                        </view>
                     </subviews>
                     <color key="backgroundColor" systemColor="systemGray6Color"/>
                     <constraints>
                         <constraint firstAttribute="bottom" secondItem="YGS-A0-CXO" secondAttribute="bottom" id="4me-3B-iLQ"/>
-                        <constraint firstItem="sAP-fR-c2n" firstAttribute="top" secondItem="1Ww-BP-HPl" secondAttribute="top" id="9h9-gw-yzK"/>
+                        <constraint firstAttribute="trailing" secondItem="lby-s7-7NF" secondAttribute="trailing" id="BqH-7S-tFQ"/>
                         <constraint firstItem="sAP-fR-c2n" firstAttribute="leading" secondItem="1Ww-BP-HPl" secondAttribute="leading" id="JXA-77-Sc1"/>
                         <constraint firstItem="YGS-A0-CXO" firstAttribute="top" secondItem="sAP-fR-c2n" secondAttribute="bottom" id="JxB-Za-wKg"/>
                         <constraint firstAttribute="trailing" secondItem="sAP-fR-c2n" secondAttribute="trailing" id="SQm-Zq-x7K"/>
+                        <constraint firstItem="sAP-fR-c2n" firstAttribute="top" secondItem="lby-s7-7NF" secondAttribute="bottom" constant="1" id="TFq-xz-VIg"/>
+                        <constraint firstItem="lby-s7-7NF" firstAttribute="top" secondItem="1Ww-BP-HPl" secondAttribute="top" id="YRj-H9-IlO"/>
+                        <constraint firstItem="lby-s7-7NF" firstAttribute="leading" secondItem="1Ww-BP-HPl" secondAttribute="leading" id="YVY-90-lNz"/>
                         <constraint firstItem="YGS-A0-CXO" firstAttribute="leading" secondItem="1Ww-BP-HPl" secondAttribute="leading" id="lSB-fg-Vfk"/>
                         <constraint firstAttribute="trailing" secondItem="YGS-A0-CXO" secondAttribute="trailing" id="vxZ-Oe-Cxf"/>
                     </constraints>
@@ -93,13 +136,16 @@
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="1Ww-BP-HPl" secondAttribute="trailing" id="kTC-8a-KOu"/>
                 <constraint firstItem="1Ww-BP-HPl" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="v2E-eg-H1f"/>
             </constraints>
-            <point key="canvasLocation" x="-45" y="-11"/>
+            <point key="canvasLocation" x="-45.038167938931295" y="-11.267605633802818"/>
         </view>
     </objects>
     <resources>
         <image name="icon-search-2" width="18" height="18"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemBlueColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGray6Color">
             <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
